# aoc-vcr

./: CLAUDE.md  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/src/aoc_vcr_backend/: __init__.py  main.py  routes.py  storage.py  streaming.py
frontend/: CLAUDE.md  index.html  style.css
frontend/js/: app.js  player.js
frontend/js/renderers/: grid.js  points.js
plans/: aoc-vcr.md  aoc-viz.md
