[project]
name = "aoc-vcr-backend"
version = "0.1.0"
description = "Backend server for AoC visualization system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc_vcr_backend"]

[tool.ruff]
line-length = 100
